--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
   <body>
     <h1>This is a test</h1>
-    <p>Hello World</p>
+    <p>Hello World. This is a test website</p>
   </body>
 </html>
