--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
   <body>
     <h1>This is a test</h1>
     <p>Hello World. This is a test website</p>
+    <p>Hello World. This is a test website</p>
   </body>
 </html>
