--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             <div class="tile">
               <div class="tile is-parent">
                 <article class="tile is-child notification">
-                  <p class="title">Project title</p>
+                  <p class="title">The Smart Bathtub</p>
                   <figure class="image is-3by2">
                     <img
                       class="modal-trigger"
