--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>devfolio</title>
+    <title>Taran Pabla</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="favicon.jpg" type="image/x-icon" />
     <link rel="stylesheet" href="css/main.bundle.css" />
