Revert "Update index.html"
This reverts commit d558ed512d0550b07e7eb34cf350133b9bdf7913.

--- a/index.html
+++ b/index.html
@@ -88,15 +88,15 @@
         <h1 class="title">About Me</h1>
         <hr />
         <p>
-          I am a Sophmore student at Hofstra University pursuing a 
-          Bachelor of Science in Computer Science. I am truly passionate 
-          about my education as a student and am eager to learn and 
-          code as much as I can. I'm looking for opportunities to diversify 
-          my skillset. I am interested in developing a wide range of skills 
-          in diverse fields that would complement each other in unexpected ways. 
-          With these skills, I would like to put to good use by me trying to 
-          either create projects to help others and society, or to answer a 
-          lingering problem that spiked my interest.
+          I am a Sophmore student at Hofstra University pursuing a Bachelor of
+          Science in Computer Science. I am truly passionate about my education
+          as a student and am eager to learn and code as much as I can. I'm
+          looking for opportunities to diversify my skillset. I am interested in
+          developing a wide range of skills in diverse fields that would
+          complement each other in unexpected ways. With these skills, I would
+          like to it put to good use by me trying to either create projects to
+          help others and society, or to answer a lingering problem that spiked
+          my interest.
         </p>
       </div>
     </section>
@@ -176,17 +176,17 @@
                 <li>
                   Greet customers and present credible product solutions based
                   on customers’ needs; build repeat business through
-                  consultative solution selling and customer satisfaction.
+                  consultative solution selling and customer satisfaction
                 </li>
                 <li>
                   Maintain product knowledge and participate in continued sales,
-                  vendor and product training.
+                  vendor and product training
                 </li>
                 <li>
                   Perform merchandising activities such as processing freight,
                   creating displays and end caps, completing markdowns and price
                   changes and maintaining visual merchandising standards within
-                  my Area of Responsibility (AOR).
+                  my Area of Responsibility (AOR)
                 </li>
               </ul>
               <div class="tags">
@@ -198,18 +198,13 @@
       </div>
     </section>
 
-
-    <!-- Projects Section -->
     <section class="section">
       <div class="container">
         <h1 class="title">Projects</h1>
         <hr />
-        <!--First row of projects-->
         <div class="tile is-ancestor">
           <div class="tile is-vertical is-12">
             <div class="tile">
-
-              <!-- Project 1 -->
               <div class="tile is-parent">
                 <article class="tile is-child notification">
                   <p class="title">The Smart Bathtub</p>
@@ -222,10 +217,9 @@
                   </figure>
                 </article>
               </div>
-              <!-- Project 2 -->
               <div class="tile is-parent">
                 <article class="tile is-child notification">
-                  <p class="title">Antiperspirant Testing</p>
+                  <p class="title">Project title</p>
                   <figure class="image is-4by3">
                     <img
                       class="modal-trigger"
@@ -250,16 +244,12 @@
             </div>
           </div>
         </div>
-
-        <!--2nd row of projects-->
-        <!-- 
         <div class="tile is-ancestor">
           <div class="tile is-vertical is-12">
             <div class="tile">
-
               <div class="tile is-parent">
                 <article class="tile is-child notification">
-                  <p class="title">Project Title</p>
+                  <p class="title">Project title</p>
                   <figure class="image is-4by3">
                     <img
                       class="modal-trigger"
@@ -269,8 +259,6 @@
                   </figure>
                 </article>
               </div>
-
-               
               <div class="tile is-parent">
                 <article class="tile is-child notification">
                   <p class="title">Project title</p>
@@ -283,8 +271,6 @@
                   </figure>
                 </article>
               </div>
-
-
               <div class="tile is-parent">
                 <article class="tile is-child notification">
                   <p class="title">Project title</p>
@@ -297,9 +283,6 @@
                   </figure>
                 </article>
               </div>
-
-            -->
-
             </div>
           </div>
         </div>
