--- a/index.html
+++ b/index.html
@@ -341,6 +341,7 @@
     </section>
 
     <!-- Modals -->
+    <!-- Project 1 Carousel-->
     <div id="project-1-modal" class="modal">
         <div class="modal-background"></div>
         <div class="modal-card">
@@ -387,7 +388,7 @@
             </footer>
         </div>
     </div>
-
+    <!-- Project 2 Carousel-->
     <div id="project-2-modal" class="modal">
         <div class="modal-background"></div>
         <div class="modal-card">
@@ -434,7 +435,7 @@
             </footer>
         </div>
     </div>
-
+    <!-- Project 3 Carousel-->
     <div id="project-3-modal" class="modal">
         <div class="modal-background"></div>
         <div class="modal-card">
@@ -477,7 +478,7 @@
             </footer>
         </div>
     </div>
-
+    <!-- Project 4 Carousel-->
     <div id="project-4-modal" class="modal">
         <div class="modal-background"></div>
         <div class="modal-card">
@@ -520,7 +521,7 @@
             </footer>
         </div>
     </div>
-
+    <!-- Project 5 Carousel-->
     <div id="project-5-modal" class="modal">
         <div class="modal-background"></div>
         <div class="modal-card">
@@ -563,7 +564,7 @@
             </footer>
         </div>
     </div>
-
+    <!-- Project 6 Carousel-->
     <div id="project-6-modal" class="modal">
         <div class="modal-background"></div>
         <div class="modal-card">
@@ -607,6 +608,7 @@
         </div>
     </div>
 
+    <!-- Footer -->
     <footer class="footer">
         <div class="content has-text-centered">
             <p>
