--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Taran Pabla</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="favicon.jpg" type="image/x-icon">
+    <link rel="icon" href="img/favicon.jpg" type="image/x-icon">
     <link rel="stylesheet" href="css/main.bundle.css">
     <script src="https://kit.fontawesome.com/4e5a72c756.js"></script>
 </head>
