--- a/index.html
+++ b/index.html
@@ -188,19 +188,23 @@
                                 <p class="title">The Smart Bathtub</p>
                                 <figure class="image is-3by2">
                                     <img class="modal-trigger" data-target="project-1-modal"
-                                        src="img/project-1-cover.png">
+                                        src="img/project-1-cover.jpg">
                                 </figure>
                             </article>
                         </div>
+                        <!-- Project 2 - Antiperspirant Testing-->
                         <div class="tile is-parent">
                             <article class="tile is-child notification">
-                                <p class="title">Project title</p>
+                                <p class="title">Antiperspirant Testing</p>
                                 <figure class="image is-4by3">
                                     <img class="modal-trigger" data-target="project-2-modal"
-                                        src="img/project-2-cover.png">
+                                        src="img/project-2-cover.jpg">
                                 </figure>
                             </article>
                         </div>
+
+                        <!-- Project 3 -->
+                        <!--
                         <div class="tile is-parent">
                             <article class="tile is-child notification">
                                 <p class="title">Project title</p>
@@ -210,6 +214,7 @@
                                 </figure>
                             </article>
                         </div>
+                        -->
                     </div>
                 </div>
             </div>
