--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                                 <p class="title">The Smart Bathtub</p>
                                 <figure class="image is-3by2">
                                     <img class="modal-trigger" data-target="project-1-modal"
-                                        src="img/project-1-cover.jpg">
+                                        src="img/project1/project-1-cover.jpg">
                                 </figure>
                             </article>
                         </div>
@@ -198,7 +198,7 @@
                                 <p class="title">Antiperspirant Testing</p>
                                 <figure class="image is-4by3">
                                     <img class="modal-trigger" data-target="project-2-modal"
-                                        src="img/project-2-cover.jpg">
+                                        src="img/project2/project-2-cover.jpg">
                                 </figure>
                             </article>
                         </div>
@@ -358,13 +358,13 @@
 
                 <div id="project-1-modal-carousel" class="carousel">
                     <figure class="image is-4by3 carousel-cell">
-                        <img src="img/carousel/1.png">
+                        <img src="img/project1/Whole_setup.jpg">
                     </figure>
                     <figure class="image is-4by3 carousel-cell">
-                        <img src="img/carousel/2.png">
+                        <img src="img/project1/Tub_and_Pumps.jpg">
                     </figure>
                     <figure class="image is-4by3 carousel-cell">
-                        <img src="img/carousel/3.png">
+                        <img src="img/project1/Wiring.jpg">
                     </figure>
                 </div>
 
