--- a/index.html
+++ b/index.html
@@ -369,20 +369,23 @@
                 </div>
 
                 <div class="content">
-
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et
-                        dolore
-                        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                        ex ea
-                        commodo
-                        consequat.</p>
+                    <p>
+                        The smart bathtub is a monitoring system that manages the water temperature in a bath. 
+                        This system utilizes the Raspberry Pi and Arduino along with two water pumps, 
+                        two relays, a temperature sensor, and two liquid flow meters. This system was created 
+                        to provide parents with a convenient and reliable alternative for bath time. Sets of 
+                        code were created using Python on the Raspberry Pi that would allow the user to input 
+                        the volume of the bathtub, the desired water temperature, and initial water temperature.
+                        The Raspberry Pi would integrate the programmed information and run parameters that 
+                        allow the 4 channel 5V Relay to disengage both the hot water pump and the cold water 
+                        pump depending on the desired temperature.
+                    </p>
 
                     <div class="tags">
-                        <span class="tag">angular</span>
-                        <span class="tag">mongo</span>
-                        <span class="tag">typscript</span>
-                        <span class="tag">node</span>
+                        <span class="tag">Python</span>
+                        <span class="tag">Raspberry Pi</span>
+                        <span class="tag">Arduino</span>
+                        <span class="tag">Hardware Prototyping</span>
                     </div>
 
                 </div>
