--- a/index.html
+++ b/index.html
@@ -166,7 +166,8 @@
                             </li>
                         </ul>
                         <div class="tags">
-                            <span class="tag">Networking</span>
+                            <span class="tag">Hardware Solutions</span>
+                            <span class="tag">Networking/Routing</span>
                         </div>
                     </div>
                 </div>
@@ -229,7 +230,7 @@
                                 <p class="title">Project title</p>
                                 <figure class="image is-4by3">
                                     <img class="modal-trigger" data-target="project-4-modal"
-                                        src="img/project-4-cover.png">
+                                        src="img/project4/project-4-cover.png">
                                 </figure>
                             </article>
                         </div>
@@ -238,7 +239,7 @@
                                 <p class="title">Project title</p>
                                 <figure class="image is-4by3">
                                     <img class="modal-trigger" data-target="project-5-modal"
-                                        src="img/project-5-cover.png">
+                                        src="img/project5/project-5-cover.png">
                                 </figure>
                             </article>
                         </div>
@@ -247,7 +248,7 @@
                                 <p class="title">Project title</p>
                                 <figure class="image is-4by3">
                                     <img class="modal-trigger" data-target="project-6-modal"
-                                        src="img/project-6-cover.png">
+                                        src="img/project6/project-6-cover.png">
                                 </figure>
                             </article>
                         </div>
@@ -255,7 +256,6 @@
                 </div>
             </div>
             -->
-
         </div>
     </section>
 
@@ -358,6 +358,9 @@
 
                 <div id="project-1-modal-carousel" class="carousel">
                     <figure class="image is-4by3 carousel-cell">
+                        <img src="img/project1/project-1-cover.jpg">
+                    </figure>
+                    <figure class="image is-4by3 carousel-cell">
                         <img src="img/project1/Whole_setup.jpg">
                     </figure>
                     <figure class="image is-4by3 carousel-cell">
@@ -373,12 +376,15 @@
                         The smart bathtub is a monitoring system that manages the water temperature in a bath. 
                         This system utilizes the Raspberry Pi and Arduino along with two water pumps, 
                         two relays, a temperature sensor, and two liquid flow meters. This system was created 
-                        to provide parents with a convenient and reliable alternative for bath time. Sets of 
-                        code were created using Python on the Raspberry Pi that would allow the user to input 
+                        to provide parents with a convenient and reliable alternative for bath time. 
+                        <br><br>
+                        Sets of code were created using Python on the Raspberry Pi that would allow the user to input 
                         the volume of the bathtub, the desired water temperature, and initial water temperature.
                         The Raspberry Pi would integrate the programmed information and run parameters that 
                         allow the 4 channel 5V Relay to disengage both the hot water pump and the cold water 
                         pump depending on the desired temperature.
+                        <br><br>
+                        <a href="https://github.com/taranpabla/Automatic-Smart-Bathtub">Project Github</a>
                     </p>
 
                     <div class="tags">
@@ -408,31 +414,33 @@
 
                 <div id="project-2-modal-carousel" class="carousel">
                     <figure class="image is-4by3 carousel-cell">
-                        <img src="img/carousel/1.png">
+                        <img src="img/project2/project-2-cover.jpg">
                     </figure>
                     <figure class="image is-4by3 carousel-cell">
-                        <img src="img/carousel/2.png">
+                        <img src="img/project2/code.jpg">
                     </figure>
                     <figure class="image is-4by3 carousel-cell">
-                        <img src="img/carousel/3.png">
+                        <img src="img/project2/method.jpg">
                     </figure>
                 </div>
 
                 <div class="content">
 
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et
-                        dolore
-                        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                        ex ea
-                        commodo
-                        consequat.</p>
+                    <p>To test the effectiveness of different antiperspirants, a Raspberry pi with a humidity
+                        sensor was used to measure the humidity created after a workout. Two Python programs 
+                        were created: one that used the humidity sensor on the Sense HAT to collect the data
+                        from the sensor and the other to import that data into a Comma Separated Value (.csv) 
+                        file for analyzation. To power and make the Raspberry Pi 3 portable so data collection 
+                        could be immediate, a 16000 milliamp USB battery pack was used.
+                        <br><br>
+                        <a href="https://github.com/taranpabla/SweatProject">Project Github</a>
+                    </p>
 
                     <div class="tags">
-                        <span class="tag">angular</span>
-                        <span class="tag">mongo</span>
-                        <span class="tag">typscript</span>
-                        <span class="tag">node</span>
+                        <span class="tag">Python</span>
+                        <span class="tag">Linux</span>
+                        <span class="tag">Raspberry Pi</span>
+                        <span class="tag">Prototyping</span>
                     </div>
 
                 </div>
