--- a/index.html
+++ b/index.html
@@ -338,14 +338,15 @@
                         <a href="https://www.linkedin.com/in/taranpabla/" class="icon is-large">
                             <i class="fab fa-2x fa-linkedin-in"></i>
                         </a>
-                        <p class="heading"><a href="https://www.linkedin.com/in/taranpabla/">linkedin</a></p>
+                        <p class="heading"><a href="https://www.linkedin.com/in/taranpabla/">linkedin.com/taranpabla</a>
+                        </p>
                     </div>
                 </div>
             </nav>
         </div>
     </section>
 
-    <!-- Modals -->
+    <!-- Projects -->
     <!-- Project 1 Carousel-->
     <div id="project-1-modal" class="modal">
         <div class="modal-background"></div>
@@ -373,15 +374,15 @@
 
                 <div class="content">
                     <p>
-                        The smart bathtub is a monitoring system that manages the water temperature in a bath. 
-                        This system utilizes the Raspberry Pi and Arduino along with two water pumps, 
-                        two relays, a temperature sensor, and two liquid flow meters. This system was created 
-                        to provide parents with a convenient and reliable alternative for bath time. 
+                        The smart bathtub is a monitoring system that manages the water temperature in a bath.
+                        This system utilizes the Raspberry Pi and Arduino along with two water pumps,
+                        two relays, a temperature sensor, and two liquid flow meters. This system was created
+                        to provide parents with a convenient and reliable alternative for bath time.
                         <br><br>
-                        Sets of code were created using Python on the Raspberry Pi that would allow the user to input 
+                        Sets of code were created using Python on the Raspberry Pi that would allow the user to input
                         the volume of the bathtub, the desired water temperature, and initial water temperature.
-                        The Raspberry Pi would integrate the programmed information and run parameters that 
-                        allow the 4 channel 5V Relay to disengage both the hot water pump and the cold water 
+                        The Raspberry Pi would integrate the programmed information and run parameters that
+                        allow the 4 channel 5V Relay to disengage both the hot water pump and the cold water
                         pump depending on the desired temperature.
                         <br><br>
                         <a href="https://github.com/taranpabla/Automatic-Smart-Bathtub">Project Github</a>
@@ -393,9 +394,7 @@
                         <span class="tag">Arduino</span>
                         <span class="tag">Hardware Prototyping</span>
                     </div>
-
                 </div>
-
             </section>
             <footer class="modal-card-foot">
                 <button class="button is-success">Close</button>
@@ -411,7 +410,6 @@
                 <button class="delete" aria-label="close"></button>
             </header>
             <section class="modal-card-body">
-
                 <div id="project-2-modal-carousel" class="carousel">
                     <figure class="image is-4by3 carousel-cell">
                         <img src="img/project2/project-2-cover.jpg">
@@ -423,26 +421,23 @@
                         <img src="img/project2/method.jpg">
                     </figure>
                 </div>
-
                 <div class="content">
-
-                    <p>To test the effectiveness of different antiperspirants, a Raspberry pi with a humidity
-                        sensor was used to measure the humidity created after a workout. Two Python programs 
+                    <p>
+                        To test the effectiveness of different antiperspirants, a Raspberry pi with a humidity
+                        sensor was used to measure the humidity created after a workout. Two Python programs
                         were created: one that used the humidity sensor on the Sense HAT to collect the data
-                        from the sensor and the other to import that data into a Comma Separated Value (.csv) 
-                        file for analyzation. To power and make the Raspberry Pi 3 portable so data collection 
+                        from the sensor and the other to import that data into a Comma Separated Value (.csv)
+                        file for analyzation. To power and make the Raspberry Pi 3 portable so data collection
                         could be immediate, a 16000 milliamp USB battery pack was used.
                         <br><br>
                         <a href="https://github.com/taranpabla/SweatProject">Project Github</a>
                     </p>
-
                     <div class="tags">
                         <span class="tag">Python</span>
                         <span class="tag">Linux</span>
                         <span class="tag">Raspberry Pi</span>
                         <span class="tag">Prototyping</span>
                     </div>
-
                 </div>
 
             </section>
@@ -462,24 +457,20 @@
             <section class="modal-card-body">
                 <div id="project-3-modal-carousel" class="carousel">
                     <figure class="image is-4by3 carousel-cell">
-                        <img src="img/carousel/1.png">
+                        <img src="img/project3/project-3-cover.png">
                     </figure>
                     <figure class="image is-4by3 carousel-cell">
-                        <img src="img/carousel/2.png">
+                        <img src="img/project3/project-3-cover.png">
                     </figure>
                     <figure class="image is-4by3 carousel-cell">
-                        <img src="img/carousel/3.png">
+                        <img src="img/project3/project-3-cover.png">
                     </figure>
                 </div>
 
                 <div class="content">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et
-                        dolore
-                        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                        ex ea
-                        commodo
-                        consequat.</p>
+                    <p>
+                        Lorem ipsum dolor sit amet
+                    </p>
                     <div class="tags">
                         <span class="tag">angular</span>
                         <span class="tag">mongo</span>
@@ -505,13 +496,13 @@
             <section class="modal-card-body">
                 <div id="project-4-modal-carousel" class="carousel">
                     <figure class="image is-4by3 carousel-cell">
-                        <img src="img/carousel/1.png">
+                        <img src="img/project4/project-4-cover.png">
                     </figure>
                     <figure class="image is-4by3 carousel-cell">
-                        <img src="img/carousel/2.png">
+                        <img src="img/project4/project-4-cover.png">
                     </figure>
                     <figure class="image is-4by3 carousel-cell">
-                        <img src="img/carousel/3.png">
+                        <img src="img/project4/project-4-cover.png">
                     </figure>
                 </div>
 
@@ -548,13 +539,13 @@
             <section class="modal-card-body">
                 <div id="project-5-modal-carousel" class="carousel">
                     <figure class="image is-4by3 carousel-cell">
-                        <img src="img/carousel/1.png">
+                        <img src="img/project5/project-5-cover.png">
                     </figure>
                     <figure class="image is-4by3 carousel-cell">
-                        <img src="img/carousel/2.png">
+                        <img src="img/project5/project-5-cover.png">
                     </figure>
                     <figure class="image is-4by3 carousel-cell">
-                        <img src="img/carousel/3.png">
+                        <img src="img/project5/project-5-cover.png">
                     </figure>
                 </div>
 
@@ -591,13 +582,13 @@
             <section class="modal-card-body">
                 <div id="project-6-modal-carousel" class="carousel">
                     <figure class="image is-4by3 carousel-cell">
-                        <img src="img/carousel/1.png">
+                        <img src="img/project6/project-6-cover.png">
                     </figure>
                     <figure class="image is-4by3 carousel-cell">
-                        <img src="img/carousel/2.png">
+                        <img src="img/project6/project-6-cover.png">
                     </figure>
                     <figure class="image is-4by3 carousel-cell">
-                        <img src="img/carousel/3.png">
+                        <img src="img/project6/project-6-cover.png">
                     </figure>
                 </div>
 
