--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                             Taranveer Singh Pabla
                         </h1>
                         <h2 class="subtitle">
-                            Sophomore Computer Science Student at Hofstra University </h2>
+                            Junior Computer Science Student at Hofstra University </h2>
                         <p>
                             <a href="docs/Resume.pdf" class="icon has-text-light">
                                 <i class="fas fa-file-word"></i> <strong>Resume</strong>
@@ -72,7 +72,7 @@
             <h1 class="title">About Me</h1>
             <hr />
             <p>
-                I am a Sophmore student at Hofstra University pursuing a Bachelor of
+                I am a junior student at Hofstra University pursuing a Bachelor of
                 Science in Computer Science. I am truly passionate about my education
                 as a student and am eager to learn and code as much as I can. I'm
                 looking for opportunities to diversify my skillset. I am interested in
