update resume color

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <h2 class="subtitle">
                             Junior Computer Science Student at Hofstra University </h2>
                         <p>
-                            <a href="docs/resume.pdf" target="_blank" class="icon has-text-blue">
+                            <a href="docs/resume.pdf" target="_blank" class="icon has-text-light-blue">
                                 <i class="fas fa-file-word"></i> <strong>Resume</strong>
                             </a>
                         </p>
