--- a/index.html
+++ b/index.html
@@ -215,6 +215,7 @@
                         <div class="tags">
                             <span class="tag">Hardware Solutions</span>
                             <span class="tag">Networking/Routing</span>
+                            <span class="tag">IT Support</span>
                         </div>
                     </div>
                 </div>
@@ -554,13 +555,7 @@
                 </div>
 
                 <div class="content">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et
-                        dolore
-                        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                        ex ea
-                        commodo
-                        consequat.</p>
+                    <p>To be filled later</p>
                     <div class="tags">
                         <span class="tag">angular</span>
                         <span class="tag">mongo</span>
