--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-YZ3P0J5H2T"></script>
     <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'G-YZ3P0J5H2T');
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-YZ3P0J5H2T');
     </script>
     <title>Taran Pabla</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -119,7 +118,7 @@
                         </p>
                         <ul>
                             <li>
-                                Build web apps by using PHP/HTML5/CSS3/JavaScript with cross browser compatibility requirements
+                                Build web apps by using HTML5/CSS3/JavaScript with cross browser compatibility requirements
                             </li>
                             <li>
                                 Develop or validate test routines to ensure that delivered code meet the provided use case and is compatible for all types of devices and browsers
@@ -136,7 +135,6 @@
                             
                         </ul>
                         <div class="tags">
-                            <span class="tag">PHP</span>
                             <span class="tag">HTML5</span>
                             <span class="tag">CSS3</span>
                             <span class="tag">JavaScript</span>
@@ -346,7 +344,7 @@
                                 datetime="2018-6">June 2018</time></p>
                     </div>
                     <div class="content">
-                        Advanced High school Regents Diploma
+                        Advanced High School Regents Diploma
                         <ul>
                             <li>
                                 Member of National Honor Society and Language Honor Society
