--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-YZ3P0J5H2T"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
         gtag('js', new Date());
         gtag('config', 'G-YZ3P0J5H2T');
     </script>
@@ -82,8 +85,8 @@
             <p>
                 I am a junior student at Hofstra University pursuing a Bachelor of
                 Science in Computer Science. I am truly passionate about my education
-                as a student and am eager to learn and code as much as I can. 
-                
+                as a student and am eager to learn and code as much as I can.
+
                 I'm looking for opportunities to diversify my skillset. I am interested in
                 developing a wide range of skills in diverse fields that would
                 complement each other in unexpected ways. With these skills, I would
@@ -118,10 +121,12 @@
                         </p>
                         <ul>
                             <li>
-                                Build web apps by using HTML5/CSS3/JavaScript with cross browser compatibility requirements
+                                Build web apps by using HTML5/CSS3/JavaScript with cross browser compatibility
+                                requirements
                             </li>
                             <li>
-                                Develop or validate test routines to ensure that delivered code meet the provided use case and is compatible for all types of devices and browsers
+                                Develop or validate test routines to ensure that delivered code meet the provided use
+                                case and is compatible for all types of devices and browsers
                             </li>
                             <li>
                                 Document all changes made
@@ -132,7 +137,7 @@
                             <li>
                                 Implement design specs accurately
                             </li>
-                            
+
                         </ul>
                         <div class="tags">
                             <span class="tag">HTML5</span>
