--- a/index.html
+++ b/index.html
@@ -387,10 +387,10 @@
                 </div>
                 <div class="level-item has-text-centered">
                     <div>
-                        <a href="mailto:tpabla1@pride.hofstra.edu" class="icon is-large">
+                        <a href="mailto:taran12315@gmail.com" class="icon is-large">
                             <i class="fas fa-2x fa-envelope"></i>
                         </a>
-                        <p class="heading"><a href="mailto:tpabla1@pride.hofstra.edu">tpabla1@pride.hofstra.edu</a></p>
+                        <p class="heading"><a href="mailto:taran12315@gmail.com">taran12315@gmail.com</a></p>
                     </div>
                 </div>
                 <div class="level-item has-text-centered">
