--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
                             Taranveer Singh Pabla
                         </h1>
                         <h2 class="subtitle">
-                            Junior Computer Science Student at Hofstra University </h2>
+                            Senior Computer Science Student at Hofstra University </h2>
                         <p>
-                            <a href="docs/spring2021resume.pdf" target="_blank" class="icon has-text-light-blue">
+                            <a href="docs\Taranveer_Pabla_Resume.pdf" target="_blank" class="icon has-text-light-blue">
                                 <i class="fas fa-file-word"></i> <strong>Resume</strong>
                             </a>
                         </p>
@@ -83,16 +83,8 @@
             <h1 class="title">About Me</h1>
             <hr />
             <p>
-                I am a junior student at Hofstra University pursuing a Bachelor of
-                Science in Computer Science. I am truly passionate about my education
-                as a student and am eager to learn and code as much as I can.
-
-                I'm looking for opportunities to diversify my skillset. I am interested in
-                developing a wide range of skills in diverse fields that would
-                complement each other in unexpected ways. With these skills, I would
-                like to it put to good use by me trying to either create projects to
-                help others and society, or to answer a lingering problem that spiked
-                my interest.
+                I am a senior student at Hofstra University pursuing a Bachelor of Science in Computer Science. I am
+                truly passionate about my education as a student and am eager to learn and code as much as I can.
             </p>
         </div>
     </section>
