--- a/index.html
+++ b/index.html
@@ -374,10 +374,14 @@
                     <div class="content">
                         Bachelor of Science in Computer Science
                         <ul>
-                            <li>Minor: Business</li>
+                            <li>Minor: General Business</li>
                             <li>Provost Scholar</li>
-                            <li>Dean's List in the Fred DeMatteis School of Engineering and
-                                Applied Sciences</li>
+                            <li>
+                                Dean's List: Fall 2018, Fall 2019, Fall 2020, Spring 2021
+                            </li>
+                            <li>
+                                Provost's List: Spring 2020
+                            </li>
                         </ul>
                     </div>
                 </div>
