--- a/index.html
+++ b/index.html
@@ -113,20 +113,16 @@
                         </p>
                         <ul>
                             <li>
-                                Developed and launched a full stack web application using ReactJS, ExpressJS, and NodeJS
-                                used by 10k+ users.
+                                Developed and launched a subway performance dashboard using ReactJS, ExpressJS, and NodeJS used by 10k+ users.
                             </li>
                             <li>
-                                Created a new database architecture using ReThinkDB improving update speed from 1 min to
-                                realtime updates.
+                                Created a new database architecture for train location and station data using ReThinkDB, improving update speed from 1-minute intervals to real-time updates.
                             </li>
                             <li>
-                                Proposed product infrastructure ideas to build a reliable app with high performance to
-                                reduce train delay times.
+                                Used real-time train movement to predict arrival times and show weaknesses in the transit system.
                             </li>
                             <li>
-                                Effectively communicated problems to upper management and delivered results in a
-                                goal-oriented environment.
+                                Proposed product infrastructure ideas and frameworks to build a reliable app with high performance to reduce train delay times.
                             </li>
 
                         </ul>
@@ -163,19 +159,19 @@
                         </p>
                         <ul>
                             <li>
-                                Teach students in grades 5-12 the basics of coding and
-                                software development using Python.
+                                Teach students in grade 9-12 the fundamental concepts of cybersecurity, architectures, and processes related to computer and network security that include the basics of cryptography, threat models, authentication and authorization, and intrusion detection.
                             </li>
                             <li>
-                                Teach students in grade 9-12 the fundamental concepts of
-                                cybersecurity, architectures, and processes related to
-                                computer and network security that include the basics of
-                                cryptography, threat models, authentication and authorization,
-                                and intrusion detection.
+                                Teach students in grade 1-4 drag and drop programming languages like Scratch.
                             </li>
                             <li>
-                                Help students use Kali Linux to develop and analyze the
-                                results of programs made for cyber operations.
+                                Teach students in grades 5-12 the basics of coding and software development using Python.
+                            </li>
+                            <li>
+                                Help students gain an understanding of what programming is and how to create, test, and build upon their programs.
+                            </li>
+                            <li>
+                                Help students use Kali Linux to develop and analyze the results of programs made for cyber operations.
                             </li>
                         </ul>
                         <div class="tags">
