--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
                             <span class="tag">RethinkDB</span>
                             <span class="tag">ReQL</span>
                             <span class="tag">UNIX</span>
+                            <span class="tag">Agile</span>
                         </div>
                     </div>
                 </div>
